Change body to overflow hidden when the modal is open to stop Android scrolling the background

--- a/public/stylesheets/less/aoi-responsive.less
+++ b/public/stylesheets/less/aoi-responsive.less
@@ -29,9 +29,14 @@
 @aoi_alt-bg: #eee;
 
 
-body.container-fluid{
-  max-width: 1200px;
-  .center-block;
+body{
+  &.container-fluid{
+    max-width: 1200px;
+    .center-block;
+  }
+  &.modal-open {
+    overflow: hidden;  // Stops Android scrolling the main page rather than the modal
+  }
 }
 .logo{
   margin-top: 1em;
